--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -1,3 +1,32 @@
+@media (max-width: 1400px) {
+    .container{
+        flex-wrap: wrap;
+        justify-content: center;
+        height: auto;
+        gap: 30px;
+    }
+
+    .container .mario{
+        max-width: 25%;
+    }
+
+    .container .informacoes{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .container .decricao{
+        color: #ffffff;
+        text-align: center;
+    }
+
+    .container .botao-trailer {
+        background-color: #263238;
+    }
+
+}
+
 @media (max-width: 1200px) {
     body {
         background-color: #f44336;
